# matrix_multiply

./: .clang-format  .gitignore  CMakeLists.txt  clang-toolchain.cmake  clean_fish  configure_build  everything  format  main.cpp  run_build  sourceme_bash  sourceme_fish  test
app/: CMakeLists.txt  main.cpp
cuda_lin_alg/: CMakeLists.txt
cuda_lin_alg/src/: cuda_utils.cu  cuda_utils.h  cuda_utils.hpp  gpu_matrix.cu  gpu_matrix.cuh  gpu_matrix.h
kernels/: CMakeLists.txt
kernels/src/: gpu_matrix.cu  gpu_matrix.cuh
lin_alg/: CMakeLists.txt
lin_alg/src/: matrix.cpp  matrix.hpp
src/: main.cpp  matrix.cpp  matrix.hpp
tests/: CMakeLists.txt  cpu_vs_cputiled_vs_gputiled.cpp  cpu_vs_cputiled_vs_gputiled.cu  main.cpp  test_a.cpp
